# vacancy-gnn

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: data.yaml  model_baseline.yaml  model_egnn.yaml  train.yaml
data/: README.md
data/sample/: factory_sample.json
notebooks/: 01_money_figure.ipynb
scripts/: generate_factory_data.py  make_data_sample.py  patch_e0s.py
src/vacancy_gnn/: __init__.py  cli.py  evaluate.py  metrics.py  predict.py  tracking.py  train.py
src/vacancy_gnn/data/: __init__.py  descriptors.py  factory.py  featurize.py  schema.py  splits.py  synthetic.py
src/vacancy_gnn/models/: __init__.py  base.py  baseline.py  egnn.py  reference.py
src/vacancy_gnn/physics/: __init__.py  boltzmann.py  constants.py
tests/: conftest.py  test_baseline.py  test_boltzmann.py  test_cli.py  test_descriptors.py  test_egnn.py  test_evaluate.py  test_factory.py  test_featurize.py  test_metrics.py  test_predict.py  test_reference.py  test_schema.py  test_splits.py  test_synthetic.py  test_train.py
