[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vacancy-gnn"
version = "0.1.0"
description = "Learned oxygen-vacancy configurational energies for low-noise Gibbs free energies in high-entropy oxides."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Alfred Juhlin Onbeck", email = "alfredjo00@gmail.com" }]
keywords = ["materials", "machine-learning", "gnn", "equivariant", "thermodynamics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.5",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy ML/data deps are opt-in so the core stays clone-and-run and CI-green.
ml = [
    "torch>=2.1",
    "pandas>=2.0",
    "pyarrow>=14.0",
]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.scripts]
vacancy-gnn = "vacancy_gnn.cli:app"

[project.urls]
Homepage = "https://github.com/alfredjo00/vacancy-gnn"
Repository = "https://github.com/alfredjo00/vacancy-gnn"

[tool.hatch.build.targets.wheel]
packages = ["src/vacancy_gnn"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["torch.*", "pandas.*", "matplotlib.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=vacancy_gnn --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["vacancy_gnn"]
